# mkdocs-pygments

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pygments.css  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: index.html
credits/: index.html
docs/: index.md
docs/.overrides/partials/: comments.html
docs/insiders/: changelog.md  index.md  installation.md
docs/reference/: api.md
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/mkdocs_pygments/: index.html
reference/mkdocs_pygments/debug/: index.html
reference/mkdocs_pygments/plugin/: index.html
scripts/: gen_credits.py  insiders.py
search/: search_index.json
src/mkdocs_pygments/: __init__.py  debug.py  plugin.py
src/mkdocs_pygments/_internal/: debug.py  plugin.py
tests/: __init__.py  test_api.py  test_plugin.py
