[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "mkdocs-pygments"
description = "Highlighting themes for code blocks."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://pawamoy.github.io/mkdocs-pygments"
Documentation = "https://pawamoy.github.io/mkdocs-pygments"
Changelog = "https://pawamoy.github.io/mkdocs-pygments/changelog"
Repository = "https://github.com/pawamoy/mkdocs-pygments"
Issues = "https://github.com/pawamoy/mkdocs-pygments/issues"
Discussions = "https://github.com/pawamoy/mkdocs-pygments/discussions"
Gitter = "https://gitter.im/mkdocs-pygments/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.entry-points."mkdocs.plugins"]
pygments = "mkdocs_pygments.plugin:PygmentsPlugin"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
source-includes = ["share"]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
